/* Server<->Client messages definitions */

syntax = "proto3";
package server;

option java_package = "com.github.connteam.conn.core.net.proto";
option java_outer_classname = "NetProtos";

message AuthRequest {
    bytes payload = 1;
}

message AuthResponse {
    string username = 1;
    bytes publicKey = 2;
    bytes signature = 3;
}

message AuthStatus {
    enum Status {
        INTERNAL_ERROR = 0;
        LOGGED_IN = 1;
        REGISTERED = 2;
        MISMATCHED_PUBLICKEY = 3;
        INVALID_SIGNATURE = 4;
        ALREADY_ONLINE = 5;
        INVALID_INPUT = 6;
    }
    Status status = 1;
}

message KeepAlive {
}

message TextMessage {
    string username = 1;
    string message = 2;
}
